--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.54.0",
     "svelma": "^0.4.5",
     "svelte-preprocess": "^4.10.7",
-    "svelte-routing": "^1.6.0"
+    "svelte-routing": "^1.6.0",
+    "svelte-toasts": "^1.1.2"
   }
 }
