--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@svelte-drama/suspense": "^0.3.6",
     "bulma": "^0.9.4",
     "fontawesome-svelte": "^2.0.1",
     "moment": "^2.29.4",
